<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".userDetails.UserDetailsActivity">

        <TextView
            android:id="@+id/detailsWelcomingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/details_get_to_know"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsWelcomingTextView" />

        <Spinner
            android:id="@+id/ageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/ageTextView"
            app:layout_constraintStart_toEndOf="@+id/ageTextView"
            app:layout_constraintTop_toTopOf="@+id/ageTextView" />


        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/genderTextView"
            app:layout_constraintStart_toEndOf="@+id/genderTextView"
            app:layout_constraintTop_toTopOf="@+id/genderTextView" />

        <EditText
            android:id="@+id/genderEditText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/genderSpinner"
            app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

        <TextView
            android:id="@+id/teamTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:text="@string/team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderEditText" />

        <EditText
            android:id="@+id/teamEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:enabled="false"
            android:inputType="number"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/teamTextView"
            app:layout_constraintStart_toEndOf="@+id/teamTextView"
            app:layout_constraintTop_toTopOf="@+id/teamTextView" />

        <ImageView
            android:id="@+id/detailsImageView"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/meet_giraffe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teamTextView" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsImageView">

            <Button
                android:id="@+id/detailsStartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <ProgressBar
                android:id="@+id/detailsProgressBar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="gone"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
